--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # database init, supports mysql too
 database=h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 
